--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "acme-challenge-test": "^3.3.2"
+    "acme-http-01-test": "^3.1.3"
   },
   "engines": {
     "node": ">=12"
